--- a/bin/notebooks/Experiments_Zenoh_querable.ipynb
+++ b/bin/notebooks/Experiments_Zenoh_querable.ipynb
@@ -31,14 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Putting Data ('demo/kitchen/temp': '16')...\n"
+      "Putting Data ('demo/test/some': '27')...\n"
      ]
     }
    ],
@@ -47,18 +47,15 @@
     "\n",
     "random.seed()\n",
     "\n",
-    "def read_temp():\n",
-    "    return random.randint(15, 30)\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    session = zenoh.open()\n",
-    "    key = 'demo/kitchen/temp'\n",
-    "    pub = session.declare_publisher(key)\n",
+    "session = zenoh.open()\n",
+    "key = 'demo/test/some'\n",
+    "pub = session.declare_publisher(key)\n",
     "\n",
-    "    t = read_temp()\n",
-    "    buf = f\"{t}\"\n",
-    "    print(f\"Putting Data ('{key}': '{buf}')...\")\n",
-    "    pub.put(buf)\n"
+    "t = random.randint(15, 30)\n",
+    "buf = f\"{t}\"\n",
+    "print(f\"Putting Data ('{key}': '{buf}')...\")\n",
+    "pub.put(buf)\n"
    ]
   },
   {
