--- a/bin/notebooks/Experiments_Docker_SDK.ipynb
+++ b/bin/notebooks/Experiments_Docker_SDK.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -36,92 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': '69b8fe1f20d45df9dce1cf1a805041605ffa68947ca03698816281b81e9a5591',\n",
-       "  'name': 'keel-zenoh-zenoh-router-1',\n",
+       "[{'id': 'e36a7b141081eee8a1e017e34891c4454c59e2cb17beff82982adcb12f145e4c',\n",
+       "  'name': 'infallible_wilbur',\n",
+       "  'image': 'vsc-keelson-e1b3f16dd20d4f24f9f6bb3b8f275901f709c9c333f97d65b5d9e23906728bb5-features-uid:latest',\n",
+       "  'status': 'running',\n",
+       "  'created': '2023-12-05T20:05:37.745571653Z',\n",
+       "  'restart_policy': 'no',\n",
+       "  'last_start': '2023-12-05T20:05:38.050136929Z'},\n",
+       " {'id': '156e84f0e33003c4a828b98a06cd9df1f90b9fc97f42b0891ec22c1bd4921303',\n",
+       "  'name': 'zenoh-router-zenoh-router-1',\n",
        "  'image': 'eclipse/zenoh:0.10.0-rc',\n",
        "  'status': 'running',\n",
-       "  'created': '2023-10-31T12:07:10.885036468Z',\n",
+       "  'created': '2023-11-23T09:19:48.001958723Z',\n",
        "  'restart_policy': 'always',\n",
-       "  'last_start': '2023-12-01T14:47:01.071349753Z'},\n",
-       " {'id': '0baa2862c7fb747de3de078c6d9e1b218ca6a854c7ee66adcfad09bffd4bcb0b',\n",
-       "  'name': 'dagster-docker-dagster-daemon-1',\n",
-       "  'image': 'dagster-docker-dagster-daemon:latest',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-10-29T06:34:10.864548873Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-10-29T06:41:17.23088795Z'},\n",
-       " {'id': 'e688511f2e7a027e44ad6ea0fdb7dd5acb098010341b43dad8de6157b13febea',\n",
-       "  'name': 'dagster-docker-dagster-dagit-1',\n",
-       "  'image': 'dagster-docker-dagster-dagit:latest',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-10-29T06:34:10.8453411Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-10-29T06:41:17.918756071Z'},\n",
-       " {'id': '964b5901366ac1ae2b8c3dd5822cab8f8d9e9cbec49f67810b5174b17ee69b87',\n",
-       "  'name': 'dagster-docker-dagster-postgres-1',\n",
-       "  'image': 'postgres:13.3',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-10-29T06:34:10.845064062Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-10-29T06:41:17.916334014Z'},\n",
-       " {'id': '8514f3775d3f519c354aa6a64433c03877be72d2462a2d0a4024cbb279434f46',\n",
-       "  'name': 'cw-ouster-lidar-0',\n",
-       "  'image': 'cw-ouster-lidar:latest',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-06-29T17:21:21.967825653Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-06-29T17:38:39.399261576Z'},\n",
-       " {'id': 'e4f958d7a58885d46604c4652b958691f31f8a2221579145d18f397b42d37295',\n",
-       "  'name': 'cw-gnss-opendlv-0',\n",
-       "  'image': 'ghcr.io/mo-rise/crowsnest-processor-opendlv-gnss:0.0.2',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-05-04T20:20:23.974716528Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-05-04T20:20:24.380838279Z'},\n",
-       " {'id': 'd31d87c1267d08190e545e681749ded34a3c3263d2a2ad7ccc957a34263920b1',\n",
-       "  'name': 'cw-point-rot-nup-1',\n",
-       "  'image': 'crowsnest-processor-point-rotation-point-rotation-0:latest',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-05-04T13:47:04.066732754Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-05-05T19:29:07.168947027Z'},\n",
-       " {'id': 'a52ce0b5051e72dd136809e2f94eb91bec4076c28f8d5388eeaf09a61f15d6c5',\n",
-       "  'name': 'cw-point-rot-nup-0',\n",
-       "  'image': 'crowsnest-processor-point-rotation-point-rotation-0:latest',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-05-04T13:47:04.010479007Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-05-05T19:29:07.169714339Z'},\n",
-       " {'id': 'acf4e0ffe0db3e797f8bc7ab24151a8050578acff8dd4b7844ef55962972b2d8',\n",
-       "  'name': 'cw-traefik',\n",
-       "  'image': 'traefik:v2.5',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-04-27T06:17:01.185889181Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-09-01T13:45:24.843501097Z'},\n",
-       " {'id': '1d46002edb112e53233a38ef4bf9e5bfed06ff8f729849d832370ff383daa11c',\n",
-       "  'name': 'cw-emqx',\n",
-       "  'image': 'emqx/emqx:4.4.11',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-04-27T06:17:01.156108789Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-09-01T13:45:24.846854191Z'},\n",
-       " {'id': '9ea8f902c225340db77bbb50f90c4026e3a24ec9427d675d16904b2e607e9b0d',\n",
-       "  'name': 'cw-rtsp-server',\n",
-       "  'image': 'aler9/rtsp-simple-server:latest',\n",
-       "  'status': 'exited',\n",
-       "  'created': '2023-04-27T06:17:01.154774753Z',\n",
-       "  'restart_policy': 'unless-stopped',\n",
-       "  'last_start': '2023-09-01T13:45:24.165348111Z'}]"
+       "  'last_start': '2023-12-05T18:22:54.99311888Z'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
